# amp-extras-rs

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  PLAN_AUTOCOMPLETE.md  README.md  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml  stylua.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
crates/core/: Cargo.toml  build.rs
crates/core/src/: conversion.rs  errors.rs  errors.rs.bak  errors.rs.bak2  ffi.rs  lib.rs
crates/core/src/autocmds/: mod.rs  selection_changed.rs  visible_files_changed.rs
crates/core/src/commands/: mod.rs  prompts.rs  send_buffer.rs  send_file_ref.rs  send_line_ref.rs  send_selection.rs  send_selection_ref.rs
crates/core/src/db/: mod.rs  prompts.rs  prompts_test.rs  schema.rs
crates/core/src/ide_ops/: authenticate.rs  edit_file.rs  get_diagnostics.rs  mod.rs  nvim_notify.rs  ping.rs  read_file.rs
crates/core/src/nvim/: buffer.rs  cursor.rs  mod.rs  path.rs  selection.rs  window.rs
crates/core/src/server/: connection.rs
lua/amp_extras/: binary.lua  commands.lua  ffi.lua  init.lua  lualine.lua
lua/amp_extras/blink/: highlights.lua  init.lua  source.lua
lua/amp_extras/commands/: init.lua  logout.lua  send.lua  update.lua
lua/amp_extras/commands/dashx/: api.lua  init.lua
lua/amp_extras/commands/session/: init.lua  ui.lua
lua/amp_extras/commands/ui/: init.lua  login.lua  send_message_box.lua
lua/amp_extras/commands/ui/dashx/: form.lua  picker.lua
plugin/: amp_extras.lua
tests-integration/: Cargo.toml
tests-integration/src/: commands.rs  diagnostics.rs  lib.rs  uri.rs
