[workspace]
resolver = "2"
members = [
    "crates/core",
]

[workspace.package]
version = "0.1.0"
authors = ["wrath"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wrath-codes/amp-extras-rs"

[workspace.dependencies]
# Neovim integration
nvim-oxi = { version = "0.6", features = ["neovim-0-10"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Lazy statics
once_cell = "1.19"

# UUIDs for sync-ready IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File system
notify = "6.1"
dirs = "5.0"

# Threading
crossbeam = "0.8"
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
