[package]
name = "amp-extras-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
amp_extras_core = { path = "../crates/core" }
nvim-oxi = { workspace = true, features = ["test", "libuv"] }
serde_json.workspace = true

[build-dependencies]
nvim-oxi = { workspace = true, features = ["test"] }
